Update UssExtAttr.java